PriZm Home Page

--- a/hysteria/index.html
+++ b/hysteria/index.html
@@ -134,6 +134,7 @@
                 <img alt="Brand" src="img/Logo.png" width="75dp">
                 <li><a href="https://twitter.com/prizmstudio" target="_blank"><i class="fa fa-twitter" style="color: #4099FF;"></i></a></li>
                 <li><a href="https://www.facebook.com/prizm.r.a.d/" target="_blank"><i class="fa fa-facebook" style="color: #3B5999;"></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UCAx1_LzDjhR_q3EipE1z6AA" target="_blank"><i class="fa fa-youtube" style="color: #3B5999;"></i></a></li>
             </ul>
 
             <p>  &copy; PriZm</p>
