Renamed Hysteria to Apparition

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="team-member">
                     <img src="img/hysteria_2.jpg"  alt="" width="350dp;">
                     <h4 style="color: white;"></h4>
-                    <a href="hysteria/index.html"><p class="text-muted">Hysteria</p></a>
+                    <a href="hysteria/index.html"><p class="text-muted">Apparition</p></a>
                     <p style="font-size: 1em;"><a>Still in Development</a></p>
                     <!--
                     <ul class="list-inline social-buttons">
