--- a/hysteria/index.html
+++ b/hysteria/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="TheoreX">
 
-    <title>Hysteria</title>
+    <title>Apparition</title>
     <link rel="icon" type="image/ico" href="img/LogoIcon.ico"/>
 
     <!-- Bootstrap Core CSS 3.3.6 -->
@@ -86,7 +86,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <p class="intro-text">Hysteria</p>
+                        <p class="intro-text">Apparition</p>
                         <a href="#story" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -108,7 +108,7 @@
                 <div class="team-member">
                     <img src="img/hysteria_2.jpg"  alt="" width="350dp;">
                     <h4 style="color: white;">Chapter 1</h4>
-                    <p class="text-muted">The Foundation</p>
+                    <p class="text-muted">Hysteria</p>
                     <p style="font-size: 1em;"><a>Still in Development</a></p>
                     <!--
                     <ul class="list-inline social-buttons">
@@ -132,7 +132,7 @@
 
 
             <ul class="list-inline social-buttons">
-                <img alt="Brand" src="img/Logo.png" width="75dp">
+                <a href="http://prizmstudio.github.io"><img alt="Brand" src="img/Logo.png" width="75dp"></a>
                 <li><a href="https://twitter.com/prizmstudio" target="_blank"><i class="fa fa-twitter" style="color: #4099FF;"></i></a></li>
                 <li><a href="https://www.facebook.com/prizm.r.a.d/" target="_blank"><i class="fa fa-facebook" style="color: #3B5999;"></i></a></li>
                 <li><a href="https://www.youtube.com/channel/UCAx1_LzDjhR_q3EipE1z6AA" target="_blank"><i class="fa fa-youtube" style="color: #3B5999;"></i></a></li>
